tests/invalid/generated_binop_div_bytes_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: str = "hello"
    z = x / y
